menus/css/allMembers.css
body {
    display: flex;
    flex-direction: row;
}

.contents {
    padding-top: 20px;

    display: grid;

    /* Smallscreen */
    grid-template-rows: 300px auto auto;
    grid-template-columns: auto;
    grid-template-areas: 
        "img"
        "txt"
        "works";

    width: 100%;
    height: 100%;
    
    /* Don't let the contents hit the arrows */
    margin-left: 30px;
    margin-right: 30px;

    justify-items: center;
}

.img { 
    grid-area: img; 
    justify-self: center;

    max-width: 100%;
}

.img img {
    position: relative;
    max-width: 90%;
    height: 300px;
    object-fit: scale-down;
}

.works {
    grid-area: works;
    text-align: center;
}

.list {
    list-style-type: none;
    padding: 0;

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.list .item {
    display: flex;
    flex-direction: row;
    padding: 10px;

    width: 300px;

    color: white;

    margin-bottom: 10px;
    margin-right: 10px;

    cursor: pointer;
}

.list .itemShow {
    background-color: var(--crush40-red-pale);
}

.list .itemShow:hover {
    background-color: var(--crush40-red-pale-hover);
}

.list .itemSong {
    background-color: var(--crush40-blue-pale);
}

.list .itemSong:hover {
    background-color: rgb(30, 30, 120);
}

.list .identifier {
    margin-right: 5px;
    width: 50px;
}

@media (min-width: 1000px)
{
    .contents {
        grid-template-rows: auto;
        grid-template-columns: 310px 1fr 1fr;
        grid-template-areas: "img txt works";
        justify-items: flex-start;

        padding: 0;
    }

    .list {
        overflow: auto;
        max-height: 250px;
    }

    .img {
        align-self: center;
    }
}

@media (min-width: 1200px)
{
    .contents {
        grid-template-rows: auto;
        grid-template-columns: 400px 1fr 1fr;
        grid-template-areas: "img txt works";

        padding: 0;
    }
}

.fixedToCenter {
    position: fixed;

    display: flex;
    align-items: center;
    height: 100%;
}

.text { 
    grid-area: txt; 
    overflow: auto;
    height: 300px;
    padding-right: 5px;
}

.text .description {
    font-size: 125%;
}

.fixedLeft {
    left: 0;
}

.fixedRight {
    right: 0;
}

.navLeft, .navRight {
    background-color: transparent;
    border: none;
    cursor: pointer;

    transition: transform 100ms ease-in-out;
}

.navLeft:hover {
    grid-area: navLeft;
    transform: translateX(-5px);
}

.navRight:hover {
    grid-area: navRight;
    transform: translateX(5px);
}

